--- a/src/partials/site-footer.html
+++ b/src/partials/site-footer.html
@@ -1,9 +1,9 @@
-<footer class="site-foter">
+<footer class="site-footer">
   <p>Оставайтесь с нами</p>
 
   <ul class="site-footer__links">
     <li><a href="/blog">Блог</a></li>
     <li><a href="/suport">Поддержка</a></li>
-    <li><a href="">Карьера</a></li>
+    <li><a href="/career">Карьера</a></li>
   </ul>
 </footer>
